--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "hbs": "^4.2.0",
     "hbs-utils": "^0.0.4",
     "mysql2": "^3.11.4",
+    "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
