--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "connect-flash": "^0.1.1",
+    "date-fns": "^4.1.0",
     "express-session": "^1.18.1",
     "hbs": "^4.2.0",
     "hbs-utils": "^0.0.4",
